@@ -18,6 +18,7 @@ declare(strict_types=1);
 namespace Cobweb\ExternalImport\UserFunction;
 
 use Cobweb\ExternalImport\Domain\Repository\ConfigurationRepository;
+use Cobweb\ExternalImport\Reaction\ImportReaction;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 
 /**
@@ -27,36 +28,60 @@ class ConfigurationItems
 {
     public function listConfigurationItems(array &$parameters): void
     {
+        $reactionType = array_shift($parameters['row']['reaction_type']);
         $configurationRepository = GeneralUtility::makeInstance(ConfigurationRepository::class);
+
+        // Present group of synchronization groups (only for import reaction)
+        if ($reactionType === ImportReaction::getType()) {
+            $groups = $configurationRepository->findAllGroups();
+            if (count($groups) > 0) {
+                $parameters['items'][] = [
+                    'label' => 'LLL:EXT:external_import/Resources/Private/Language/locallang_db.xlf:sys_reaction.external_import_configuration.groups',
+                    'value' => '--div--',
+                    'group' => 'groups',
+                ];
+                foreach ($groups as $group) {
+                    $parameters['items'][] = [
+                        'label' => $group,
+                        'value' => 'group:' . $group,
+                        'group' => 'groups',
+                    ];
+                }
+            }
+        }
 
         // Present group of non-synchronizable tables
         $nonSynchronizableItems = $configurationRepository->findBySync(false);
-        $parameters['items'][] = [
-            'label' => 'LLL:EXT:external_import/Resources/Private/Language/locallang_db.xlf:sys_reaction.external_import_configuration.nonsynchronizable_tables',
-            'value' => '--div--',
-            'group' => 'nosync',
-        ];
-        foreach ($nonSynchronizableItems as $item) {
+        if (count($nonSynchronizableItems) > 0) {
             $parameters['items'][] = [
-                'label' => $item['table'] . ' - ' . $item['index'],
-                'value' => $item['id'],
+                'label' => 'LLL:EXT:external_import/Resources/Private/Language/locallang_db.xlf:sys_reaction.external_import_configuration.nonsynchronizable_tables',
+                'value' => '--div--',
                 'group' => 'nosync',
             ];
+            foreach ($nonSynchronizableItems as $item) {
+                $parameters['items'][] = [
+                    'label' => $item['table'] . ' - ' . $item['index'],
+                    'value' => $item['id'],
+                    'group' => 'nosync',
+                ];
+            }
         }
 
         // Present group of synchronizable tables
         $synchronizableItems = $configurationRepository->findBySync(true);
-        $parameters['items'][] = [
-            'label' => 'LLL:EXT:external_import/Resources/Private/Language/locallang_db.xlf:sys_reaction.external_import_configuration.synchronizable_tables',
-            'value' => '--div--',
-            'group' => 'sync',
-        ];
-        foreach ($synchronizableItems as $item) {
+        if (count($synchronizableItems) > 0) {
             $parameters['items'][] = [
-                'label' => $item['table'] . ' - ' . $item['index'],
-                'value' => $item['id'],
+                'label' => 'LLL:EXT:external_import/Resources/Private/Language/locallang_db.xlf:sys_reaction.external_import_configuration.synchronizable_tables',
+                'value' => '--div--',
                 'group' => 'sync',
             ];
+            foreach ($synchronizableItems as $item) {
+                $parameters['items'][] = [
+                    'label' => $item['table'] . ' - ' . $item['index'],
+                    'value' => $item['id'],
+                    'group' => 'sync',
+                ];
+            }
         }
     }
 }
